--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,12 @@
         {% endif %}
         <h1><a href="/">Django Girls Blog</a></h1>
       </div>
+      <div class="citation">
+          Selected excerpts from the book by <a href="http://yudkowsky.net/">Eliezer Yudkowsky</a>
+          <h1><a href="http://www.hpmor.com/">"Harry Potter And The Methods Of Rationality"</a></h1>
+      </div>
       <div class="content container">
+
           <div class="row">
               <div class="col-md-8">
               {% block content %}
